add choose activity
Signed-off-by: xuwanjin <xuwanjin1991@Gmail.com>

--- a/ActivityDemo/app/src/main/res/values/strings.xml
+++ b/ActivityDemo/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="started_activity_implicit">Started Activity Implicit</string>
     <string name="started_activity_from_background">Started Activity From Background</string>
     <string name="start_activity_from_background">Start Activity From Background</string>
+    <string name="choose_activity">Choose Activity</string>
 </resources>
