--- a/ActivityDemo/app/src/main/res/values/strings.xml
+++ b/ActivityDemo/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="start_activity_from_background">Start Activity From Background</string>
     <string name="choose_activity">Choose Activity</string>
     <string name="start_activity_for_result">Start Activity For Result</string>
+    <string name="started_activity_for_result">Started Activity For Result</string>
 </resources>
